--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h1>Calculator</h1>
+        <h1>The Calci</h1>
        
         <div class="calculator">
         <input type="" name="screen" id ="screen">
